--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.3",
@@ -45,6 +46,7 @@
     "path": "^0.12.7",
     "pg": "^7.8.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
